--- a/gift-shop.properties
+++ b/gift-shop.properties
@@ -1,5 +1,5 @@
 #HSQL Database Engine 2.6.0
-#Sun Dec 12 16:16:46 UTC 2021
-tx_timestamp=56
-modified=yes
+#Mon Dec 20 19:48:18 SAMT 2021
+tx_timestamp=175
+modified=no
 version=2.6.0
